welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: not enough arguments for method parcoursColone: (tableau: Array[java.awt.Color])Unit.
Unspecified value parameter tableau.
  gauche();avance();droite();parcoursColone()}
                                           ^Array1:10: error: not found: value length
    for (i <- 0 to length.T-1){
                   ^Array1:17: error: not found: value length
    for (l<- 0 to length.tableau -1){
                  ^Array1:18: error: not found: type l
      avance(); setCouleurBrosse(tableau[l]); baisseBrosse(); leveBrose()
                                         ^Array1:18: error: value tableau of type Array[java.awt.Color] does not take type parameters.
      avance(); setCouleurBrosse(tableau[l]); baisseBrosse(); leveBrose()
                                        ^Array1:18: error: not found: value leveBrose
      avance(); setCouleurBrosse(tableau[l]); baisseBrosse(); leveBrose()
                                                              ^